# global-temperature

./: .gitignore  README.md  examples.py  pyproject.toml  test.py
scripts/: search_replace_push.sh
src/global_temperature/: __init__.py  config.py  config.yaml  temperature.py  temperature_base.py  temperature_daily.py  temperature_monthly.py
src/global_temperature/grids/: grid.py
src/global_temperature/grids/01x01/: data.parquet
src/global_temperature/grids/03x03/: data.parquet
src/global_temperature/tools/: download.py  validate.py
tests/: test_config.py  test_download.py  test_grid.py  test_temperature.py  test_temperature_base.py  test_temperature_monthly.py  test_validate.py
