[project]
name = "global-temperature"
version = "0.1.0"
description = ""
authors = [
    {name = "zacwang",email = "knde2019@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygeohash (>=3.0.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "global_temperature", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
